# virtual_secretary_backend

./: README.md  pyproject.toml
virtual_secretary_backend/: main.py
